force-app/main/default/objects/Stripe_Subscription__c/Stripe_Subscription__c.object-meta.xml
<CustomObject>
    <label>Stripe Subscription</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Stripe Subscriptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>