force-app/main/default/objects/Stripe_Subscription__c/fields/Checkout_URL__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Url__c</fullName>
    <label>Checkout Url</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>