force-app/main/default/objects/Stripe_Subscription__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipName>Stripe_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>