force-app/main/default/objects/Stripe_Subscription__c/fields/Price_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_ID__c</fullName>
    <externalId>true</externalId>
    <label>Price ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>