force-app/main/default/objects/Stripe_Subscription__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>