force-app/main/default/objects/Stripe_Subscription__c/fields/Propration_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Propration_Behavior__c</fullName>
    <description>If you want to charge for an upgrade immediately, pass proration behavior as always invoice to create prorations, automatically invoice the customer for those proration adjustments, and attempt to collect payment. If you pass create prorations, the prorations are created but not automatically invoiced. If you don’t want to prorate, set the proration behavior option to none</description>
    <inlineHelpText>If you want to charge for an upgrade immediately, pass proration behavior as always invoice to create prorations, automatically invoice the customer for those proration adjustments, and attempt to collect payment. If you pass create prorations, the prorations are created but not automatically invoiced. If you don’t want to prorate, set the proration behavior option to none</inlineHelpText>
    <label>Proration Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>always_invoice</fullName>
            </value>
            <value>
                <fullName>create_prorations</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>