force-app/main/default/objects/Stripe_Subscription__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of subscriptions for purchase.</description>
    <inlineHelpText>Number of subscriptions for purchase. Defaults to 1</inlineHelpText>
    <label>Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>