force-app/main/default/objects/Stripe_Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Incomplete Expired</fullName>
            </value>
            <value>
                <fullName>Trialing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Checkout Session Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>