force-app/main/default/objects/Stripe_Subscription__c/fields/Stripe_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Checkout__c</fullName>
    <label>Stripe Checkout Session Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>