force-app/main/default/objects/Stripe_Subscription__c/fields/Stripe_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_URL__c</fullName>
    <formula>&quot;https://dashboard.stripe.com/subscriptions/&quot; &amp; Subscription_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe URL</label>
    <type>Text</type>
</CustomField>